--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div id="cart" class="flex">
       <img src="./cartIcon.png" alt="CartItems" />
-      <p>Cart Items (0)</p>
+      <p>Cart Items (<span id="cartValue">0</span>))</p>
     </div>
   </nav>
 
@@ -46,7 +46,7 @@
             <p>$7.49</p>
             <div id="book1" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -63,7 +63,7 @@
             <p>$4.59</p>
             <div id="book2" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
             <p>$6.80</p>
             <div id="book3" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -96,7 +96,7 @@
             <p>$10</p>
             <div id="book4" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -112,7 +112,7 @@
             <p>$7.29</p>
             <div id="book5" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
             <p>$4.99</p>
             <div id="book6" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -153,7 +153,7 @@
             <p>$17.49</p>
             <div id="game1" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -169,7 +169,7 @@
             <p>$19.99</p>
             <div id="game2" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -185,7 +185,7 @@
             <p>$20.99</p>
             <div id="game3" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -201,7 +201,7 @@
             <p>$19.49</p>
             <div id="game4" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -227,7 +227,7 @@
             <p>$12.49</p>
             <div id="craft1" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -243,7 +243,7 @@
             <p>$19.99</p>
             <div id="craft2" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -259,7 +259,7 @@
             <p>$15.99</p>
             <div id="craft3" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -275,7 +275,7 @@
             <p>$18.49</p>
             <div id="craft4" class="button flex spaceEvenly">
               <h6>Add</h6>
-              <img src="./cartIconWhite.png" alt="addToCart" />
+              <img src="./cartIconWhite.png" alt="cartValue" />
             </div>
           </div>
         </div>
@@ -299,6 +299,6 @@
 
   </footer>
 
-
+  <script src="script.js"></script>
 </body>
 </html>
